2004-11-12  Jonathan Pryor <jonpryor@vt.edu>

	* configure.in: Check for `struct dirent' members which don't exist across
	  all Unix platforms.
	* support/dirent.c: Only access members which exist on the target platform.
	* support/errno.c: Only export strerror_r if it's available.
	* support/mph.h: Remove MPH_ON_BSD; use the configure checks instead.
	* support/sys-mman.c: Only export posix_madvise if it's available.
	* support/unistd.c: Only export sethostid if it's available.

2004-11-08  Jonathan Pryor <jonpryor@vt.edu>

	* configure.in: Add new function/header/type checks for use by
	  MonoPosixHelper (the support directory).
	* support/Makefile.am: Add sys-sendfile.c to the build.
	* support/dirent.c, support/fcntl.c, support/unistd.c: Remove compile-time
	  checks for -64 apis (pread64, etc.), as they're superfluous.  GLibc 
	  #defines the functions to the appropriate -64 counterpart when necessary,
	  and Darwin is intrinsically large-file-aware, so manual checking on my
	  part is redundant and unnecessary.
	* support/grp.c: Add checks for non-portable functions getgrnam_r,
	  getgrgid_r.
	* support/pwd.c: Add checks for non-portable functions getpwnam_r,
	  getpwuid_r.
	* support/map.c: Remove <poll.h> include.  Building on Tiger (Mac OS X 10.4
	  beta) breaks when both <poll.h> and <sys/poll.h> are included, so only use
	  <sys/poll.h>.
	* support/mph.h: Clean up macro handling for type overflow checking.

2004-11-08  Raja R Harinath  <rharinath@novell.com>

	* configure.in (mcs_topdir, mcs_topdir_from_srcdir): New 'subst'ed
	variables.  Used to support both an in-tree mcs/ and a sibling
	mcs/ directory.
	* Makefile.am (mcs_topdir): Remove.
	(dist-hook): Distribute mcs/ as a subdirectory.
	* runtime/Makefile.am ($(monoone_DATA) $(monotwo_DATA) $(monobins_DATA)):
	Use mcs_topdir and mcs_topdir_from_srcdir.
	* runtime/net_1_1/Makefile.am (mscorlib.dll $(gac_assemblies) $(mdb_files)): 
	Likewise.
	(all-local): Depend on $(mdb_files) too.